Overflow of display fixed and small UI fixes.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
+    width: 100vw;
+    height: 100vh;
     text-align: center;
     background-color: beige;
+    overflow: hidden;
 }
 
 
@@ -17,7 +20,7 @@ h1 {
     position: relative;
     background-color: #ececec;
     width: 27.1vw;
-    height: 43vw;
+    height: 42vw;
     margin: auto;
     border-radius: 1vw;
     margin-top: 0;
@@ -36,11 +39,13 @@ h1 {
 #top-row {
     width: 24vw;
     height: 7.5vw;
+    overflow-x: auto;
 }
 
 #bottom-row {
     width: 24vw;
-    height: 7.5vw
+    height: 7.5vw;
+    overflow-x: hidden;
 }
 
 #functionality {
@@ -67,7 +72,7 @@ span {
 }
 
 .btn {
-    padding: 1.56vw 2.29vw 1.54vw 2.64vw;
+    padding: 1.56vw 2.29vw 1.40vw 2.64vw;
     margin-left: 0.15vw;
     background-color: inherit;
     border: none;
@@ -88,6 +93,13 @@ span {
 
 .btn-disabled {
     display: none;
+}
+
+.small-text {
+    font-size:3vw;
+}
+.more-small-text {
+    font-size:2vw;
 }
 
 @media only screen and (max-width: 1000px){
